Fix media query to allow text to have spacing from box

--- a/style.css
+++ b/style.css
@@ -60,10 +60,11 @@ a {
 
 @media (max-width: 1000px) {
   body{
-    font-size: 22px;
+    font-size: 20px;
   }
  .quote-box {
     width: 500px;
+    padding: 5px;
   }
 }
 
@@ -73,6 +74,7 @@ a {
   }
  .quote-box {
     width: 450px;
+    padding:3px
   }
 }
 
